# CamVis

./: AFace.cpp  AFace.h  AMesh.cpp  AMesh.h  AVertex.cpp  AVertex.h  CMakeLists.txt  CamVis.h  README.md  main.cpp
idea/: modules.xml  workspace.xml
idea/dictionaries/: Fis.xml
idea/inspectionProfiles/: Project_Default.xml
